fix: correct input overflow in footer on tabletV resolution

--- a/styles/modules/blocks/_footer.scss
+++ b/styles/modules/blocks/_footer.scss
@@ -233,7 +233,7 @@
     }
 
     @media (max-width: #{$tabletV}) {
-      padding-top: 11px;
+      padding-top: 10px;
       padding-bottom: 10px;
       font-size: 16px;
     }
