--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1599,7 +1599,7 @@
 }
 @media (max-width: 810px) {
   .footer__email {
-    padding-top: 11px;
+    padding-top: 10px;
     padding-bottom: 10px;
     font-size: 16px;
   }
